[project]
name = "pin-memory"
version = "0.1.0"
description = "A Memory MCP server for pinning and recalling factoids."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]",
    "click",
    "rich",
]

[project.scripts]
pin-memory = "pin_memory.main:main"


[tool.hatch.build.targets.wheel]
packages = ["src/pin_memory"]  

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
